--- a/vscode_vim/settings.json
+++ b/vscode_vim/settings.json
@@ -75,6 +75,6 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.semi": false,
   "editor.tabSize": 2,
-  "editor.fontFamily": "JetBrains Mono, 'Droid Sans Mono', 'monospace', monospace",
+  "editor.fontFamily": "Victor Mono Semibold, 'JetBrains Mono', 'Droid Sans Mono', 'monospace', monospace",
   "editor.fontLigatures": true
 }
