--- a/tmuxConfig/.tmux.conf
+++ b/tmuxConfig/.tmux.conf
@@ -1,17 +1,50 @@
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+# set -s escape-time 0
+#
+# set -g prefix C-a
+# unbind C-b
+# bind-key C-a send-prefix
+#
+# unbind %
+# bind | split-window -h 
+#
+# unbind '"'
+# bind - split-window -v
+#
+# unbind r
+# bind r source-file ~/.tmux.conf
+#
+# bind -r J resize-pane -D 5 
+# bind -r K resize-pane -U 5 
+# bind -r L resize-pane -R 5 
+# bind -r H resize-pane -L 5 
+#
+# bind -r m resize-pane -Z
+#
+# set -g mouse on
+#
+# bind -r C-h select-pane -L
+# bind -r C-j select-pane -D
+# bind -r C-k select-pane -U
+# bind -r C-l select-pane -R
+#
+# set-window-option -g mode-keys vi
+#
+# bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+# bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+#
+# unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+#
 
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
+set-option -g status-style bg=colour235,fg=colour136,default # bg=base02, fg=yellow
 
-unbind %
-bind | split-window -h 
+# easy reload config
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
-unbind '"'
-bind - split-window -v
-
-unbind r
-bind r source-file ~/.tmux.conf
+# set window split
+bind-key v split-window -h
+bind-key b split-window
 
 bind -r J resize-pane -D 5 
 bind -r K resize-pane -U 5 
@@ -20,9 +53,69 @@ bind -r H resize-pane -L 5
 
 bind -r m resize-pane -Z
 
-set -g mouse on
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=default,dim # fg=base0
 
-bind -r C-h select-pane -L
-bind -r C-j select-pane -D
-bind -r C-k select-pane -U
-bind -r C-l select-pane -R
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright # fg=orange
+
+# pane border
+set-option -g pane-border-style fg=colour235 #fg=base02
+set-option -g pane-active-border-style fg=colour240 #fg=base01
+
+# message text
+set-option -g message-style bg=colour235,fg=colour166 # bg=base02, fg=orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+# clock
+set-window-option -g clock-mode-colour green #green
+
+
+set -g status-interval 1
+set -g status-justify centre # center align window list
+set -g status-left-length 20
+set -g status-right-length 140
+set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+
+# C-b is not acceptable -- Vim uses it
+set-option -g prefix C-a
+bind-key C-a last-window
+
+# Start numbering at 1
+set -g base-index 1
+
+# Allows for faster key repetition
+set -s escape-time 50
+
+# Rather than constraining window size to the maximum size of any client 
+# connected to the *session*, constrain window size to the maximum size of any 
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# Allows us to use C-a a <command> to send commands to a TMUX session inside 
+# another TMUX session
+bind-key a send-prefix
+
+# Activity monitoring
+setw -g monitor-activity on
+set -g visual-activity on
+
+# hjkl pane traversal
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+# auto window rename
+set-window-option -g automatic-rename
+
+# Vi copypaste mode
+set-window-option -g mode-keys vi
