--- a/tmuxConfig/.tmux.conf
+++ b/tmuxConfig/.tmux.conf
@@ -1,5 +1,12 @@
-set -g default-terminal "screen-256color"
-set -s escape-time 0
+set -g default-terminal "tmux-256color"
+set -g set-clipboard on
+set -g escape-time 0
+set -g focus-events on
+set -g history-limit 100000
+set -g history-file ~/.tmux/log/tmuxhistory
+
+set -ga terminal-overrides ",*:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 set -g prefix C-a
 unbind C-b
@@ -12,10 +19,10 @@ bind-key b split-window
 unbind r
 bind r source-file ~/.tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+bind -r H resize-pane -L 5
 
 bind -r m resize-pane -Z
 
