--- a/tmuxConfig/.tmux.conf
+++ b/tmuxConfig/.tmux.conf
@@ -28,7 +28,7 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
-set-window-option -g mode-keys vi
+set-window- -g mode-keys vi
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -59,29 +59,69 @@ bind l select-pane -R
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
-set-option -g status-style fg=yellow,bg=black #yellow and base02
+set -g status-style fg=yellow,bg=black #yellow and base02
 
 # default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
-#set-window-option -g window-status-style dim
+setw -g window-status-style fg=brightblue,bg=default #base0 and default
+#set-window- -g window-status-style dim
 
 # active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-#set-window-option -g window-status-current-style bright
+setw -g window-status-current-style fg=brightred,bg=default #orange and default
+#set-window- -g window-status-current-style bright
 
 # pane border
-set-option -g pane-border-style fg=black #base02
-set-option -g pane-active-border-style fg=brightgreen #base01
+set -g pane-border-style fg=black #base02
+set- -g pane-active-border-style fg=brightgreen #base01
 
 # message text
-set-option -g message-style fg=brightred,bg=black #orange and base01
+set- -g message-style fg=brightred,bg=black #orange and base01
 
 # pane number display
-set-option -g display-panes-active-colour brightred #orange
-set-option -g display-panes-colour blue #blue
+set- -g display-panes-active-colour brightred #orange
+set- -g display-panes-colour blue #blue
 
 # clock
-set-window-option -g clock-mode-colour green #green
+set-window- -g clock-mode-colour green #green
 
 # bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+set-window- -g window-status-bell-style fg=black,bg=red #base02, red
+
+
+# #!/usr/bin/env bash
+#
+# # TokyoNight colors for Tmux
+#
+# set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+#
+# set -g message-style "fg=#7aa2f7,bg=#3b4261"
+# set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+#
+# set -g pane-border-style "fg=#3b4261"
+# set -g pane-active-border-style "fg=#7aa2f7"
+#
+# set -g status "on"
+# set -g status-justify "left"
+#
+# set -g status-style "fg=#7aa2f7,bg=#16161e"
+#
+# set -g status-left-length "100"
+# set -g status-right-length "100"
+#
+# set -g status-left-style NONE
+# set -g status-right-style NONE
+#
+# set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
+# set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
+# if-shell '[ "$(tmux show- -gqv "clock-mode-style")" == "24" ]' {
+#   set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %H:%M #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
+# }
+#
+# setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
+# setw -g window-status-separator ""
+# setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
+# setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
+# setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
+#
+# # tmux-plugins/tmux-prefix-highlight support
+# set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
+# set -g @prefix_highlight_output_suffix ""
