--- a/tmuxConfig/.tmux.conf
+++ b/tmuxConfig/.tmux.conf
@@ -37,55 +37,24 @@ bind k select-pane -U
 bind l select-pane -R
 
 # set Ui no plugin theme
-# set -g status-justify "left"
-# set -g status "on"
-# set -g status-left-style "none"
-# set -g message-command-style "fg=colour0,bg=colour11"
-# set -g status-right-style "none"
-# set -g pane-active-border-style "fg=colour14"
-# set -g status-style "none,bg=colour0"
-# set -g message-style "fg=colour0,bg=colour11"
-# set -g pane-border-style "fg=colour11"
-# set -g status-right-length "100"
-# set -g status-left-length "100"
-# setw -g window-status-activity-style "none"
-# setw -g window-status-separator ""
-# setw -g window-status-style "none,fg=colour10,bg=colour0"
-# set -g status-left "#[fg=colour8,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
-# set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold] %Y-%m-%d #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold]  %H:%M  #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour14,bold] #h "
-# setw -g window-status-format "#[fg=colour10,bg=colour0] #I #[fg=colour10,bg=colour0] #W "
-# setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
-
-#### COLOUR (Solarized dark)
-
-# default statusbar colors
-set -g status-style fg=yellow,bg=black #yellow and base02
-
-# default window title colors
-setw -g window-status-style fg=brightblue,bg=default #base0 and default
-#set-window- -g window-status-style dim
-
-# active window title colors
-setw -g window-status-current-style fg=brightred,bg=default #orange and default
-#set-window- -g window-status-current-style bright
-
-# pane border
-set -g pane-border-style fg=black #base02
-set- -g pane-active-border-style fg=brightgreen #base01
-
-# message text
-set- -g message-style fg=brightred,bg=black #orange and base01
-
-# pane number display
-set- -g display-panes-active-colour brightred #orange
-set- -g display-panes-colour blue #blue
-
-# clock
-set-window- -g clock-mode-colour green #green
-
-# bell
-set-window- -g window-status-bell-style fg=black,bg=red #base02, red
-
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour0,bg=colour11"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour14"
+set -g status-style "none,bg=colour0"
+set -g message-style "fg=colour0,bg=colour11"
+set -g pane-border-style "fg=colour11"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=colour10,bg=colour0"
+set -g status-left "#[fg=colour8,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold] %Y-%m-%d #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold]  %H:%M  #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour14,bold] #h "
+setw -g window-status-format "#[fg=colour10,bg=colour0] #I #[fg=colour10,bg=colour0] #W "
+setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
 
 # #!/usr/bin/env bash
 #
