--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,35 +1,33 @@
 import:
   # uncomment the flavour you want below:
-  # - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
   - ~/.config/alacritty/solarized_dark.yml
+  - ~/.config/alacritty/tokyo_night.yml
 
 env:
- TERM: xterm-256color
+  TERM: xterm-256color
 window:
- # dimensions:
- #  columns: 155
- #  lines: 32
- position:
-  x: 0
-  y: 0
- padding:
-  x: 3
-  y: 0
- dynamic_padding: false
- opacity: 0.90
+  # dimensions:
+  #   columns: 155
+  #   lines: 32
+  position:
+    x: 0
+    y: 0
+  padding:
+    x: 5
+    y: 5
+  dynamic_padding: false
+  opacity: 0.90
 font:
- normal:
-  family: Nova Nerd Font
-  style: Regular
- medium:
-  family: Nova Nerd Font
-  style: Medium
- italic:
-  family: Nova Nerd Font
-  style: Italic
- size: 8.0
+  normal:
+    family: Nova Nerd Font
+    style: Regular
+  medium:
+    family: Nova Nerd Font
+    style: Medium
+  italic:
+    family: Nova Nerd Font
+    style: Italic
+  size: 8.0
 cursor:
- style:
-  shape: Block
-
-
+  style:
+    shape: Block
