--- a/alacritty/solarized_dark.yml
+++ b/alacritty/solarized_dark.yml
@@ -1,34 +1,24 @@
-# TokyoNight Alacritty Colors
 colors:
-  # Default colors
   primary:
-    background: '0x1a1b26'
-    foreground: '0xc0caf5'
+    background: '#002b36'
+    foreground: '#839496'
 
-  # Normal colors
   normal:
-    black:   '0x15161e'
-    red:     '0xf7768e'
-    green:   '0x9ece6a'
-    yellow:  '0xe0af68'
-    blue:    '0x7aa2f7'
-    magenta: '0xbb9af7'
-    cyan:    '0x7dcfff'
-    white:   '0xa9b1d6'
+    black: '#073642'
+    red: '#dc322f'
+    green: '#859900'
+    yellow: '#b58900'
+    blue: '#268bd2'
+    magenta: '#d33682'
+    cyan: '#2aa198'
+    white: '#eee8d5'
 
-  # Bright colors
   bright:
-    black:   '0x414868'
-    red:     '0xf7768e'
-    green:   '0x9ece6a'
-    yellow:  '0xe0af68'
-    blue:    '0x7aa2f7'
-    magenta: '0xbb9af7'
-    cyan:    '0x7dcfff'
-    white:   '0xc0caf5'
-
-  indexed_colors:
-    - { index: 16, color: '0xff9e64' }
-    - { index: 17, color: '0xdb4b4b' }
-    
-  
+    black: '#002b36'
+    red: '#cb4b16'
+    green: '#586e75'
+    yellow: '#657b83'
+    blue: '#839496'
+    magenta: '#6c71c4'
+    cyan: '#93a1a1'
+    white: '#fdf6e3'
