chore:update aria2

--- a/.aria2/aria2.conf
+++ b/.aria2/aria2.conf
@@ -22,6 +22,7 @@ quiet=false
 ### Advanced ###
 # Restart download from scratch if the corresponding control file doesn't exist. Default: false
 allow-overwrite=true
+follow-metalink=true
 # If false is given, aria2 aborts download when a piece length is different from one in a control file. If true is given, you can proceed but some download progress will be lost. Default: false
 allow-piece-length-change=true
 # Always resume download. If true is given, aria2 always tries to resume download and if resume is not possible, aborts download. If false is given, when all given URIs do not support resume or aria2 encounters N URIs which does not support resume, aria2 downloads file from scratch. Default: true
@@ -35,9 +36,9 @@ content-disposition-default-utf8=true
 # Enable disk cache. If SIZE is 0, the disk cache is disabled. This feature caches the downloaded data in memory, which grows to at most SIZE bytes. SIZE can include K or M. Default: 16M
 disk-cache=64M
 # Specify file allocation method. none doesn't pre-allocate file space. prealloc pre-allocates file space before download begins. This may take some time depending on the size of the file. If you are using newer file systems such as ext4 (with extents support), btrfs, xfs or NTFS(MinGW build only), falloc is your best choice. It allocates large(few GiB) files almost instantly. Don't use falloc with legacy file systems such as ext3 and FAT32 because it takes almost same time as prealloc and it blocks aria2 entirely until allocation finishes. falloc may not be available if your system doesn't have posix_fallocate(3) function. trunc uses ftruncate(2) system call or platform-specific counterpart to truncate a file to a specified length. Possible Values: none, prealloc, trunc, falloc. Default: prealloc
-file-allocation=falloc
+file-allocation=none
 # No file allocation is made for files whose size is smaller than SIZE. Default: 5M
-no-file-allocation-limit=8M
+# no-file-allocation-limit=8M
 # Set log level to output to console. LEVEL is either debug, info, notice, warn or error. Default: notice
 # console-log-level=notice
 # Set log level to output. LEVEL is either debug, info, notice, warn or error. Default: debug
@@ -48,7 +49,9 @@ no-file-allocation-limit=8M
 
 ### RPC ###
 # Enable JSON-RPC/XML-RPC server. Default: false
-enable-rpc=false
+enable-rpc=true
+rpc-listen-port=6800
+# rpc-user=aria2
 # Pause download after added. This option is effective only when --enable-rpc=true is given. Default: false
 # pause=false
 # Save the uploaded torrent or metalink meta data in the directory specified by --dir option. If false is given to this option, the downloads added will not be saved by --save-session option. Default: true
@@ -77,7 +80,8 @@ min-split-size=8M
 # Download a file using N connections. The number of connections to the same host is restricted by the --max-connection-per-server option. Default: 5
 split=32
 # Set user agent for HTTP(S) downloads. Default: aria2/$VERSION, $VERSION is replaced by package version.
-user-agent=Transmission/2.77
+# user-agent=Transmission/2.77
+user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.5414.101 Safari/537.36
 
 ### BitTorrent ###
 # Save meta data as ".torrent" file. Default: false
@@ -95,6 +99,10 @@ seed-time=0
 # Enable Local Peer Discovery. If a private flag is set in a torrent, aria2 doesn't use this feature for that download even if true is given. Default: false
 # bt-enable-lpd=false
 # Enable IPv4 DHT functionality. It also enables UDP tracker support. If a private flag is set in a torrent, aria2 doesn't use DHT for that download even if true is given. Default: true
+dht=true
+enable-http-keep-alive=true
+http-no-cache=true
+lowest-speed-limit=100k
 enable-dht=true
 # Enable IPv6 DHT functionality. If a private flag is set in a torrent, aria2 doesn't use DHT for that download even if true is given.
 enable-dht6=true
