fix:broken code

--- a/.aria2/aria2.conf
+++ b/.aria2/aria2.conf
@@ -49,7 +49,7 @@ file-allocation=none
 
 ### RPC ###
 # Enable JSON-RPC/XML-RPC server. Default: false
-enable-rpc=true
+enable-rpc=false
 rpc-listen-port=6800
 # rpc-user=aria2
 # Pause download after added. This option is effective only when --enable-rpc=true is given. Default: false
