--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,15 @@ set -ga terminal-overrides ",*:Tc"
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 set -g prefix C-a
+
+set -g set-titles on
+set -g set-titles-string "#I:#W"
+
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g mouse on
+
 unbind C-b
 bind-key C-a send-prefix
 
@@ -28,15 +37,12 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
-set-window- -g mode-keys vi
-
 # hjkl pane traversal
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# set Ui no plugin theme
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
@@ -60,42 +66,3 @@ setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,noundersco
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-
-# #!/usr/bin/env bash
-#
-# # TokyoNight colors for Tmux
-#
-# set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-#
-# set -g message-style "fg=#7aa2f7,bg=#3b4261"
-# set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-#
-# set -g pane-border-style "fg=#3b4261"
-# set -g pane-active-border-style "fg=#7aa2f7"
-#
-# set -g status "on"
-# set -g status-justify "left"
-#
-# set -g status-style "fg=#7aa2f7,bg=#16161e"
-#
-# set -g status-left-length "100"
-# set -g status-right-length "100"
-#
-# set -g status-left-style NONE
-# set -g status-right-style NONE
-#
-# set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
-# set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
-# if-shell '[ "$(tmux show- -gqv "clock-mode-style")" == "24" ]' {
-#   set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %H:%M #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
-# }
-#
-# setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
-# setw -g window-status-separator ""
-# setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
-# setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
-# setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
-#
-# # tmux-plugins/tmux-prefix-highlight support
-# set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
-# set -g @prefix_highlight_output_suffix ""
