--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,10 +57,10 @@ set -g status-left-length "100"
 setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=colour10,bg=colour0"
-set -g status-left "#[fg=colour8,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold] %Y-%m-%d #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold]  %H:%M  #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour14,bold] #h "
-setw -g window-status-format "#[fg=colour10,bg=colour0] #I #[fg=colour10,bg=colour0] #W "
-setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=colour8,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]┇"
+set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] %Y-%m-%d  #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,bold]  %H:%M   #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour14,bold] #h "
+setw -g window-status-format "#[fg=colour10,bg=colour0] #I ┇#[fg=colour10,bg=colour0] #W "
+setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] "
 
 # Undercurl
 set -g default-terminal "${TERM}"
