--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,11 +6,11 @@ import:
 env:
   TERM: xterm-256color
 window:
-  # dimensions:
-  #   columns: 155
-  #   lines: 32
+  dimensions:
+    columns: 130
+    lines: 32
   position:
-    x: 0
+    x: 155
     y: 0
   padding:
     x: 3
