chore: update config aria2

--- a/.aria2/aria2.conf
+++ b/.aria2/aria2.conf
@@ -92,7 +92,7 @@ max-connection-per-server=16
 # aria2 does not split less than 2*SIZE byte range. Possible Values: 1M -1024M. Default: 20M
 min-split-size=3M
 # Download a file using N connections. The number of connections to the same host is restricted by the --max-connection-per-server option. Default: 5
-split=2
+split=16
 retry-wait=3
 # Set user agent for HTTP(S) downloads. Default: aria2/$VERSION, $VERSION is replaced by package version.
 # user-agent=Transmission/2.77
@@ -164,3 +164,4 @@ uri-selector=adaptive
 deferred-input=true
 force-sequential=true
 console-log-level=error
+log-level=error
