--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,7 +4,7 @@ import:
   - ~/.config/alacritty/tokyo_night.yml
 
 env:
-  TERM: xterm-256color
+  TERM: alacritty
 window:
   dimensions:
     columns: 130
