chore: update config tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,23 @@
-set -g default-terminal "tmux-256color"
-set -g set-clipboard on
+set -g default-terminal "${TERM}"
+set-option -g terminal-overrides ",xterm-256color:RGB"
+
+set -g prefix ^A
+set -g base-index 1
+set -g detach-on-destroy off
 set -g escape-time 0
+
+set -g set-clipboard on
 set -g focus-events on
+
+set -g status-position top
 set -g history-limit 100000
 set -g history-file ~/.tmux/log/tmuxhistory
 
-set -ga terminal-overrides ",*:Tc"
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set -g renumber-windows on
+setw -g mode-keys vi
+# set -ga terminal-overrides ",*:Tc"
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
-set -g prefix C-a
 
 set -g set-titles on
 set -g set-titles-string "#I:#W"
@@ -33,7 +42,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 bind -r H resize-pane -L 5
 
-bind -r m resize-pane -Z
+# bind -r m resize-pane -Z
 
 set -g mouse on
 
@@ -54,11 +63,11 @@ set -g message-style "fg=colour0,bg=colour11"
 set -g pane-border-style "fg=colour11"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none"
-setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour10,bg=colour0"
+set -g window-status-activity-style "none"
+set -g window-status-separator ""
+set -g window-status-style "none,fg=colour10,bg=colour0"
 set -g status-left "#[fg=colour8,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]┇"
 set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] %Y-%m-%d  #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,bold]  %H:%M   #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour14,bold] #h "
-setw -g window-status-format "#[fg=colour10,bg=colour0] #I ┇#[fg=colour10,bg=colour0] #W "
-setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] "
+set -g window-status-format "#[fg=colour10,bg=colour0] #I ┇#[fg=colour10,bg=colour0] #W "
+set -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] "
 
