--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ bind l select-pane -R
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=colour0,bg=colour11"
+set -g message-command-style "fg=colour0,bg=colour238"
 set -g status-right-style "none"
 set -g pane-active-border-style "fg=colour14"
 set -g status-style "none,bg=colour0"
@@ -67,7 +67,7 @@ set -g window-status-activity-style "none"
 set -g window-status-separator ""
 set -g window-status-style "none,fg=colour10,bg=colour0"
 set -g status-left "#[fg=colour8,bg=colour14,bold] #S #[fg=colour14,bg=colour0,bold]┇"
-# set -g status-left "#S ┇"
+# set -g status-left "#S ┇"j
 set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] %Y-%m-%d  #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,bold]  %H:%M   #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour14,bold] #h "
 set -g window-status-format "#[fg=colour10,bg=colour0] #I ┇#[fg=colour10,bg=colour0] #W "
 set -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] "
