--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+# set -g default-terminal "screen-256color"
 set -g default-terminal "${TERM}"
 set-option -g terminal-overrides ",xterm-256color:RGB"
 
@@ -52,23 +53,44 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set -g status-justify "left"
-set -g status "on"
-set -g status-left-style "none"
-set -g message-command-style "fg=colour0,bg=colour238"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour14"
-set -g status-style "none,bg=colour0"
-set -g message-style "fg=colour0,bg=colour11"
-set -g pane-border-style "fg=colour11"
-set -g status-right-length "100"
-set -g status-left-length "100"
-set -g window-status-activity-style "none"
-set -g window-status-separator ""
-set -g window-status-style "none,fg=colour10,bg=colour0"
-set -g status-left "#[fg=colour8,bg=colour14,bold] #S #[fg=colour14,bg=colour0,bold]┇"
-# set -g status-left "#S ┇"j
-set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] %Y-%m-%d  #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,bold]  %H:%M   #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour14,bold] #h "
-set -g window-status-format "#[fg=colour10,bg=colour0] #I ┇#[fg=colour10,bg=colour0] #W "
-set -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour11] #I #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]┇#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics] #[fg=colour0,bg=colour11,bold] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics] "
+# DESIGN TWEAKS
 
+# don't do anything when a 'bell' rings
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# clock mode
+setw -g clock-mode-colour colour1
+
+# copy mode
+setw -g mode-style 'fg=colour1 bg=colour18 bold'
+
+# pane borders
+set -g pane-border-style 'fg=colour1'
+set -g pane-active-border-style 'fg=colour3'
+
+# statusbar
+set -g status-justify left
+
+set -g status on
+
+set -g status-position top 
+set -g status-style 'fg=colour3'
+set -g status-left ''
+set -g status-right '%Y-%m-%d %H:%M '
+set -g status-right-length 50
+set -g status-left-length 10
+
+setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
+setw -g window-status-current-format ' #I #W #F '
+
+setw -g window-status-style 'fg=colour1 dim'
+setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+
+setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour2 bg=colour0 bold'
