--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,23 +1,37 @@
 # set -g default-terminal "screen-256color"
-set -g default-terminal "${TERM}"
-set-option -g terminal-overrides ",xterm-256color:RGB"
+# set -g default-terminal "${TERM}"
+
+# Colors
+# How to use true colors in vim under tmux? #1246 for 2.6 and higher
+# https://github.com/tmux/tmux/issues/1246:
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+# 2.5 and lower:
+# set -g default-terminal "xterm-256color"
+
+# set-option -g terminal-overrides ",xterm-256color:RGB"
 
 set -g prefix ^A
 set -g base-index 1
 set -g detach-on-destroy off
-set -g escape-time 0
+set -s escape-time 50
+setw -g aggressive-resize on
+
+setw -g monitor-activity on
+set -g visual-activity on
 
 set -g set-clipboard on
 set -g focus-events on
 
-set -g status-position top
 set -g history-limit 100000
 set -g history-file ~/.tmux/log/tmuxhistory
 
+setw -g automatic-rename
 set -g renumber-windows on
 setw -g mode-keys vi
 # set -ga terminal-overrides ",*:Tc"
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
 
 
 set -g set-titles on
@@ -36,7 +50,7 @@ bind-key v split-window -h
 bind-key b split-window
 
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
@@ -53,44 +67,33 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# DESIGN TWEAKS
 
-# don't do anything when a 'bell' rings
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
+set -g status-position top
+set -g status-justify centre # center align window list
+set -g status-left-length 20
+set -g status-right-length 140
 
-# clock mode
-setw -g clock-mode-colour colour1
+set -g status-left '#[fg=green,bold]#H #[fg=black,bold]•' 
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
-# copy mode
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
+set-option -g status-style bg=colour235,fg=colour136,default # bg=base02, fg=yellow
 
-# pane borders
-set -g pane-border-style 'fg=colour1'
-set -g pane-active-border-style 'fg=colour3'
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=default,dim # fg=base0
 
-# statusbar
-set -g status-justify left
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright # fg=orange
 
-set -g status on
+# pane border
+set-option -g pane-border-style fg=colour235 #fg=base02
+set-option -g pane-active-border-style fg=colour240 #fg=base01
 
-set -g status-position top 
-set -g status-style 'fg=colour3'
-set -g status-left ''
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-set -g status-left-length 10
+# message text
+set-option -g message-style bg=colour235,fg=colour166 # bg=base02, fg=orange
 
-setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
-setw -g window-status-current-format ' #I #W #F '
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
 
-setw -g window-status-style 'fg=colour1 dim'
-setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
-
-setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
-
-# messages
-set -g message-style 'fg=colour2 bg=colour0 bold'
+# clock
+set-window-option -g clock-mode-colour green #green
