chore: update kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,9 +3,19 @@ bold_font   Iosevka Mayukai Serif Bold
 italic_font Iosevka Mayukai Serif Italic
 bold_italic_font Iosevka Mayukai Serif Bold Italic
 
-font_size 11.0
-force_ltf no
+font_size 11.5
 
+disable_ligatures never
+enable_audio_bell no
+
+background_opacity 0.9
+# background_blur 1
+
+remember_window_size  yes
+# initial_window_width  800
+# initial_window_height 600
+
+ # Colorscheme
 background #1a1b26
 foreground #c0caf5
 selection_background #283457
@@ -48,3 +58,6 @@ color15 #c0caf5
 # extended colors
 color16 #ff9e64
 color17 #db4b4b
+
+
+map ctrl+shift+c copy_to_clipboard
