chore: update kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -11,9 +11,9 @@ enable_audio_bell no
 background_opacity 0.9
 # background_blur 1
 
-remember_window_size  yes
-# initial_window_width  800
-# initial_window_height 600
+remember_window_size no 
+initial_window_width  1280
+initial_window_height 680
 
  # Colorscheme
 background #1a1b26
