chore:update background solarized-osaka kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,7 +16,8 @@ initial_window_width  1280
 initial_window_height 680
 
  # Colorscheme
-background #1a1b26
+# background #1a1b26
+background #041419
 foreground #c0caf5
 selection_background #283457
 selection_foreground #c0caf5
