chore: update colorscheme solarized-osaka color

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,12 +18,12 @@ initial_window_height 680
  # Colorscheme
 # background #1a1b26
 background #041419
-foreground #c0caf5
-selection_background #283457
-selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
-cursor_text_color #1a1b26
+foreground #AFB8B8
+selection_background #252858
+selection_foreground #FCF6E5
+url_color #72EBDF
+cursor #CCCFFB
+cursor_text_color #163541
 
 # Tabs
 active_tab_background #7aa2f7
@@ -59,6 +59,5 @@ color15 #c0caf5
 # extended colors
 color16 #ff9e64
 color17 #db4b4b
-
 
 map ctrl+shift+c copy_to_clipboard
