chore: convert color s-osaka hsl to hexa colorsheme alacritty

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,11 @@
 # Colors
 # How to use true colors in vim under tmux? #1246 for 2.6 and higher
 # https://github.com/tmux/tmux/issues/1246:
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+
+set -g default-terminal "alacritty"
+set -ga terminal-overrides ",alacritty:Tc"
+set -as terminal-features ",alacritty:RGB"
+
 # 2.5 and lower:
 # set -g default-terminal "xterm-256color"
 
