--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -36,27 +36,27 @@ y = 0
 
 # Default colors
 [colors.primary]
-background = '#041419'
-foreground = '#AFB8B8'
+background = '#00141a'
+foreground = '#839495'
 
 # Normal colors
 [colors.normal]
-black   = '#15161e'
-red     = '#dc322f'
-green   = '#9ece6a'
-yellow  = '#e0af68'
-blue    = '#7aa2f7'
-magenta = '#bb9af7'
-cyan    = '#7dcfff'
-white   = '#a9b1d6'
+black   = '#00141a'
+red     = '#dc312e'
+green   = '#859900'
+yellow  = '#b38600'
+blue    = '#278bd3'
+magenta = '#d33682'
+cyan    = '#2aa298'
+white   = '#ede7d4'
 
 # Bright colors
 [colors.bright]
-black   = '#002b36'
-red     = '#cb4b16'
-green   = '#586e75'
-yellow  = '#657b83'
-blue    = '#839496'
-magenta = '#6c71c4'
-cyan    = '#93a1a1'
-white   = '#fdf6e3'
+black   = '#002d38'
+red     = '#f65351'
+green   = '#b7fa00'
+yellow  = '#ffbf00'
+blue    = '#47adf5'
+magenta = '#f254a1'
+cyan    = '#2beede'
+white   = '#fdf6e2'
