--- a/.aria2/aria2.conf
+++ b/.aria2/aria2.conf
@@ -9,7 +9,7 @@ dir=${HOME}/Downloads
 ##save-session-interval=60
 
 # Set the maximum number of parallel downloads for every queue item. See also the --split option. Default: 5
-max-concurrent-downloads=3
+max-concurrent-downloads=1
 
 # Continue downloading a partially downloaded file.
 continue=true
@@ -130,22 +130,22 @@ lowest-speed-limit=100k
 enable-dht=true
 
 # Enable IPv6 DHT functionality. If a private flag is set in a torrent, aria2 doesn't use DHT for that download even if true is given.
-#enable-dht6=true
+# enable-dht6=true
 
 # Set UDP listening port used by DHT(IPv4, IPv6) and UDP tracker. Default: 6881-6999
-#dht-listen-port=50101-50109
+dht-listen-port=50101-50109
 
 # Set host and port as an entry point to IPv4 DHT network.
-#dht-entry-point=dht.transmissionbt.com:6881
+dht-entry-point=dht.transmissionbt.com:6881
 
 # Set host and port as an entry point to IPv6 DHT network.
-#dht-entry-point6=dht.transmissionbt.com:6881
+dht-entry-point6=dht.transmissionbt.com:6881
 
 # Change the IPv4 DHT routing table file to PATH. Default: $HOME/.aria2/dht.dat if present, otherwise $XDG_CACHE_HOME/aria2/dht.dat.
-#dht-file-path=${HOME}/.aria2/dht.dat
+# dht-file-path=${HOME}/.aria2/dht.dat
 
 # Change the IPv6 DHT routing table file to PATH. Default: $HOME/.aria2/dht6.dat if present, otherwise $XDG_CACHE_HOME/aria2/dht6.dat.
-#dht-file-path6=${HOME}/.aria2/dht6.dat
+# dht-file-path6=${HOME}/.aria2/dht6.dat
 
 # Enable Peer Exchange extension. If a private flag is set in a torrent, this feature is disabled for that download even if true is given. Default: true
 enable-peer-exchange=true
