--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,9 @@
 # How to use true colors in vim under tmux? #1246 for 2.6 and higher
 # https://github.com/tmux/tmux/issues/1246:
 
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",alacritty:Tc"
-set -as terminal-features ",alacritty:RGB"
+set-option -g default-terminal "screen-256color"
+set -ga terminal-overrides ",screen-256color*:Tc"
+# set -as terminal-features ",alacritty:RGB"
 
 # 2.5 and lower:
 # set -g default-terminal "xterm-256color"
@@ -17,7 +17,7 @@ set -as terminal-features ",alacritty:RGB"
 set -g prefix ^A
 set -g base-index 1
 set -g detach-on-destroy off
-set -s escape-time 50
+set -s escape-time 0
 setw -g aggressive-resize on
 
 setw -g monitor-activity on
@@ -45,6 +45,9 @@ set -g mouse on
 
 unbind C-b
 bind-key C-a send-prefix
+
+# set new window
+bind-key c new-window "arch1"
 
 # set window split
 bind-key v split-window -h
