--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@
 # How to use true colors in vim under tmux? #1246 for 2.6 and higher
 # https://github.com/tmux/tmux/issues/1246:
 
-set-option -g default-terminal "alacritty"
+set-option -g default-terminal "screen-256color"
 set -ga terminal-overrides ",alacritty*:Tc"
 # set -as terminal-features ",alacritty:RGB"
 
