--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,10 @@
 # How to use true colors in vim under tmux? #1246 for 2.6 and higher
 # https://github.com/tmux/tmux/issues/1246:
 
-set-option -g default-terminal "screen-256color"
-set -ga terminal-overrides ",alacritty*:Tc"
-# set -as terminal-features ",alacritty:RGB"
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -as terminal-features ",alacritty:RGB"
 
 # 2.5 and lower:
 # set -g default-terminal "xterm-256color"
@@ -98,3 +99,5 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
+
