--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,11 @@
 [user]
 	name = bobbyrahmanda13
-	email = bobbyrahmanda1996@protonmail.com
+	email = bobbyrahmanda1996@proton.me
 [credential]
 	helper = cache --timeout=604800
 	username = bobbyrahmanda13
 [init]
-	defaultBranch = main 
+	defaultBranch = main
 [core]
 	editor = nvim
 [color]
