--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,9 +12,13 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 set -as terminal-features ",alacritty:RGB"
 
 set -g prefix ^A
-set -g base-index 1
-set -g detach-on-destroy off
+set -g base-index 1 # start indexing windows at 1 instead of 0
+set -g detach-on-destroy off # don't exit 
 set -s escape-time 0
+
+set -g history-limit 100000
+set -g history-file ~/.tmux/log/tmuxhistory
+
 setw -g aggressive-resize on
 
 setw -g monitor-activity on
@@ -23,8 +27,6 @@ set -g visual-activity on
 set -g set-clipboard on
 set -g focus-events on
 
-set -g history-limit 100000
-set -g history-file ~/.tmux/log/tmuxhistory
 
 setw -g automatic-rename
 set -g renumber-windows on
