--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -103,8 +103,8 @@ no-fading-openclose = false
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1
-# inactive-opacity = 0.95;
+# inactive-opacity = 1.0
+inactive-opacity = 0.90
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 1.0
@@ -121,7 +121,9 @@ active-opacity = 1.0
 # inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should never be considered focused.
-focus-exclude = []
+# focus-exclude = [
+# "class_g = 'xfce4-screenshooter'"
+# ];
 # focus-exclude = [ 
 # "class_g = 'Cairo-clock'"
 # ];
@@ -136,8 +138,11 @@ focus-exclude = []
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
-
+opacity-rule = [
+"90:class_g = 'Alacritty' && focused",
+"70:class_g = 'Alacritty' && !focused",
+"10:class_g = 'xfce4-screenshooter' && focused"
+];
 
 #################################
 #           Corners             #
@@ -197,10 +202,10 @@ blur-background = true
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-  # "window_type = 'dock'",
-  # "window_type = 'desktop'",
+  "window_type = 'desktop'",
   "window_type = 'xfce4-screenshooter'",
-  # "_GTK_FRAME_EXTENTS@:c"
+  # "window_type = 'dock'",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
 
 #################################
