--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -11,9 +11,9 @@ TERM = "alacritty"
 [font]
 size = 8.0
 
-normal = { family = "Iosevka Nerd Font", style = "Regular"}
-italic = { family = "Iosevka Nerd Font", style = "Italic"}
-bold = { family = "Iosevka Nerd Font", style = "Bold"}
+normal = { family = "FantasqueSansM Nerd Font", style = "Regular"}
+italic = { family = "FantasqueSansM Nerd Font", style = "Italic"}
+bold = { family = "FantasqueSansM Nerd Font", style = "Bold"}
 
 [window]
 # dynamic_padding = false
