update picom config

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -16,8 +16,9 @@ inactive-opacity-override = false;
 active-opacity = 1;
 inactive-dim = 0.3
 opacity-rule = [
-  "90:class_g = 'Alacritty' && focused",
-  "70:class_g = 'Alacritty' && !focused",
+  "90:class_g = 'URxvt'",
+  "90:class_g = 'Alacritty'",
+  "90:class_g = 'tabbed",
 ];
 
 rounded-corners-exclude = [
@@ -25,6 +26,9 @@ rounded-corners-exclude = [
   "window_type = 'desktop'"
 ];
 
+blur-background = true;
+blur-method = "dual_kawase"
+blur-strength = 2;
 blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'desktop'",
@@ -59,6 +63,8 @@ glx-copy-from-front = false;
 
 wintypes:
 {
+  normal = { blur-background = true; };
+  splash = { blur-background = false; };
   tooltip = { 
     fade = true;
     shadow = true;
