--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -17,13 +17,8 @@ active-opacity = 1;
 inactive-dim = 0.3
 opacity-rule = [
   "90:class_g = 'URxvt'",
-  "90:class_g = 'Alacritty'",
-  "90:class_g = 'tabbed",
-];
-
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
+  "90:class_g = 'Alacritty' && focused",
+  "70:class_g = 'Alacritty' && !focused",
 ];
 
 blur-background = true;
