--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -16,7 +16,8 @@ inactive-opacity-override = false;
 active-opacity = 1;
 inactive-dim = 0.3
 opacity-rule = [
-  "90:class_g = 'URxvt'",
+  "90:class_g = 'URxvt' && focused",
+  "60:class_g = 'URxvt' && !focused",
   "90:class_g = 'Alacritty' && focused",
   "70:class_g = 'Alacritty' && !focused",
 ];
@@ -27,7 +28,8 @@ blur-strength = 2;
 blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'desktop'",
-# "window_type = 'dock'",
+"window_type = 'dock'",
+"window_type = 'xfce4-screenshooter'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
