update picom and solved xfce4-screenshooter blur

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -27,9 +27,11 @@ blur-method = "dual_kawase"
 blur-strength = 2;
 blur-kern = "3x3box";
 blur-background-exclude = [
+  "name = 'xfce4-screenshooter'",
+  # "class_g = 'xfce4-screenshooter'",
+  # "window_type = 'dialog'",
   "window_type = 'desktop'",
-"window_type = 'dock'",
-"window_type = 'xfce4-screenshooter'",
+  # "window_type = 'dock'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
