--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,9 +4,9 @@ shadow-opacity = 0.5;
 # shadow-exclude = []
 shadow-ignore-shaped = false;
 
-fading = true;
-fade-in-step = 0.05;
-fade-out-step = 0.1;
+# fading = true;
+# fade-in-step = 0.05;
+# fade-out-step = 0.1;
 # fade-exclude = [];
 # no-fading-openclose = false;
 
