--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -6,8 +6,10 @@ shadow-ignore-shaped = false;
 
 # fading = true;
 # fade-in-step = 0.05;
-# fade-out-step = 0.1;
-# fade-exclude = [];
+# fade-out-step = 0.05;
+# fade-exclude = [
+#   "name = 'xfce4-screenshooter'",
+# ];
 # no-fading-openclose = false;
 
 inactive-opacity = 1;
