update picom shadow

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,7 +1,14 @@
 shadow = true;
-shadow-radius = 13;
-shadow-opacity = 0.3;
+shadow-radius = 16;
+shadow-opacity = 0.5;
 # shadow-exclude = []
+shadow-exclude = [
+  "name = 'Notification'",
+  # "class_g = 'Conky'",
+  # "class_g ?= 'Notify-osd'",
+  # "class_g = 'Cairo-clock'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
 shadow-ignore-shaped = false;
 
 # fading = true;
